name:                findcrash
version:             0.1.0.0
synopsis:            Find intermittent crashes
description:         Blah
homepage:            https://github.com/enolan/findcrash
license:             GPL3
license-file:        LICENSE
author:              Echo Nolan
maintainer:          echo@echonolan.net
copyright:           2016 Echo Nolan
category:            Debug
build-type:          Simple
cabal-version:       >=1.10

executable findcrash
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, directory, filepath, process, time
